--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="./login.css" />
-    <title>Login</title>
+    <title>Task Manager</title>
   </head>
   <body>
     <div class="login-container">
