--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
   <body>
     <nav>
       <div id="username-display"></div>
-      <h1>Task Dashboard</h1>
+      <h1 id="text">Task Dashboard</h1>
     </nav>
     <div id="task-list">
       <div id="tobe">
